Remove menu links for pages which are not required for MVP

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,14 +11,18 @@
                 <mat-icon class="icon">timeline</mat-icon>
                 <span class="label">Status tracking</span>
             </a>
+            <!-- Commented out Phylogeny menu item
             <a mat-list-item routerLink="/phylogeny">
                 <mat-icon class="icon">account_tree</mat-icon>
                 <span class="label">Phylogeny</span>
             </a>
+            
             <a mat-list-item routerLink="/publications">
                 <mat-icon class="icon">article</mat-icon>
                 <span class="label">Publications</span>
             </a>
+            -->
+
             <a mat-list-item routerLink="/about">
                 <mat-icon class="icon">zoom_in</mat-icon>
                 <span class="label">About</span>
@@ -60,30 +64,38 @@
                             <span class="label">Status tracking</span>
                         </a>
                     </li>
+                    <!-- Commented out Phylogeny menu item
                     <li>
                         <a routerLink="/phylogeny">
                             <mat-icon class="icon">account_tree</mat-icon>
                             <span class="label">Phylogeny</span>
                         </a>
                     </li>
+                    -->
+                    <!-- Commented out Sampling Map menu item
                     <li>
                         <a routerLink="/gis">
                             <mat-icon class="icon">public</mat-icon>
                             <span class="label">Sampling Map</span>
                         </a>
                     </li>
+                    -->
+                    <!-- Commented out Dashboards menu item
                     <li>
                         <a routerLink="/dashboards">
                             <mat-icon class="icon">dashboards</mat-icon>
                             <span class="label">Dashboards</span>
                         </a>
                     </li>
+                    -->
+                    <!-- Commented out Publications menu item
                     <li>
                         <a routerLink="/publications">
                             <mat-icon class="icon">article</mat-icon>
                             <span class="label">Publications</span>
                         </a>
                     </li>
+                    -->
                     <li>
                         <a routerLink="/about">
                             <mat-icon class="icon">zoom_in</mat-icon>
