--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,24 +1,16 @@
 <mat-sidenav-container>
     <mat-sidenav-content>
         <mat-toolbar color="primary">
-            <div>
+            <div class="footer-left">
                 Powered by
                 <br>
-                <img src="../../assets/embl_ebi_rgb_2018_4.png"
+                <img src="../../assets/Australian-Biocommons-Logo.png"
                      class="img-fluid4">
             </div>
-            <div>
-                <img src="../../assets/bge.webp" class="img-fluid">
-            </div>
-            <div>
-                <img src="../../assets/eu.webp" class="img-fluid2">
-            </div>
-            <div>
-                <img src="../../assets/sw.webp" class="img-fluid3">
-            </div>
-            <div>
-                <img src="../../assets/ukri.webp" class="img-fluid3">
+            <div class="footer-right">
+                <img src="../../assets/Bioplatforms_Australia_Logo.png" class="img-fluid3">
             </div>
         </mat-toolbar>
     </mat-sidenav-content>
 </mat-sidenav-container>
+
