--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -46,8 +46,7 @@
             </div>
             <div>
                 <a routerLink="/home">
-                    <img src="../../assets/erga_logo.png" class="img-fluid"
-                         alt="home">
+                    <span class="label">AToL</span>
                 </a>
             </div>
             <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
