Update styling and update branding to AToL

--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -9,6 +9,6 @@
 
 <div class="hero-image">
     <div class="hero-text">
-        <h1>A GENOME ATLAS OF EUROPEAN BIODIVERSITY</h1>
+        <h1>A GENOME ATLAS OF AUSTRALIAN BIODIVERSITY</h1>
     </div>
 </div>
