--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,14 +1,14 @@
 <mat-sidenav-container>
     <mat-sidenav-content>
         <mat-toolbar color="primary">
-            <div class="footer-left">
+            <div fxFlex fxLayout fxLayoutAlign="flex-start" fxHide.xs>
                 Powered by
                 <br>
                 <img src="../../assets/Australian-Biocommons-Logo.png"
-                     class="img-fluid4">
+                     class="australian-biocommons-logo">
             </div>
-            <div class="footer-right">
-                <img src="../../assets/Bioplatforms_Australia_Logo.png" class="img-fluid3">
+            <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
+                <img src="../../assets/Bioplatforms_Australia_Logo.png" class="australian-bioplatforms-logo">
             </div>
         </mat-toolbar>
     </mat-sidenav-content>
