--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -46,7 +46,7 @@
             </div>
             <div>
                 <a routerLink="/home">
-                    <span class="label">AToL</span>
+                    <span class="label">The Australian Tree of Life</span>
                 </a>
             </div>
             <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
